// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`design-system/Checkbox AvecMessage smoke-test 1`] = `
<div class="flex gap-2 min-w-min">
  <input id="cb7"
         type="checkbox"
         class="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center mt-0.5 border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
  >
  <div class="flex flex-col gap-1">
    <label for="cb7"
           class="inline-flex items-center cursor-pointer ml-0 font-medium text-grey-8"
    >
      Description de l'action
    </label>
    <div class="flex items-center text-grey-7 my-auto">
      <span class="text-xs">
        Description additionnelle
      </span>
    </div>
  </div>
</div>
`;

exports[`design-system/Checkbox AvecMessageEtEtat smoke-test 1`] = `
<div class="flex gap-2 min-w-min">
  <input id="cb8"
         type="checkbox"
         class="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center mt-0.5 border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
  >
  <div class="flex flex-col gap-1">
    <label for="cb8"
           class="inline-flex items-center cursor-pointer ml-0 font-medium text-grey-8"
    >
      Description de l'action
    </label>
    <div class="flex items-center text-info-1 my-auto">
      <span class="ri-information-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mr-1">
      </span>
      <span class="text-xs">
        Description additionnelle
      </span>
    </div>
  </div>
</div>
`;

exports[`design-system/Checkbox AvecMessageUniquement smoke-test 1`] = `
<div class="flex gap-2 min-w-min">
  <input id="cb9"
         type="checkbox"
         class="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center mt-0.5 border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
  >
  <div class="flex flex-col gap-1">
    <div class="flex items-center text-grey-7 my-auto">
      <span class="text-xs">
        Le lorem ipsum est, en imprimerie, une suite de mots sans signification utilisée
      </span>
    </div>
  </div>
</div>
`;

exports[`design-system/Checkbox AvecPersonnalisationDuContainer smoke-test 1`] = `
<div class="flex gap-2 min-w-min border border-grey p-4">
  <input id="cb13"
         type="checkbox"
         class="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center mt-0.5 border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
         checked
  >
  <div class="flex flex-col gap-1">
    <label for="cb13"
           class="inline-flex items-center cursor-pointer ml-0 font-medium text-grey-8"
    >
      Description de l'action
    </label>
  </div>
</div>
`;

exports[`design-system/Checkbox Checked smoke-test 1`] = `
<div class="flex gap-2 min-w-min">
  <input id="cb3"
         type="checkbox"
         class="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center mt-0.5 border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
         checked
  >
  <div class="flex flex-col gap-1">
    <label for="cb3"
           class="inline-flex items-center cursor-pointer ml-0 font-medium text-grey-8"
    >
      Description de l'action
    </label>
  </div>
</div>
`;

exports[`design-system/Checkbox CheckedAndDisabled smoke-test 1`] = `
<div class="flex gap-2 min-w-min">
  <input id="cb5"
         type="checkbox"
         class="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center mt-0.5 border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
         disabled
         checked
  >
  <div class="flex flex-col gap-1">
    <label for="cb5"
           class="inline-flex items-center cursor-pointer ml-0 font-medium text-grey-6"
    >
      Description de l'action
    </label>
  </div>
</div>
`;

exports[`design-system/Checkbox LongLabelAvecMessage smoke-test 1`] = `
<div class="max-w-[16rem]">
  <div class="flex gap-2 min-w-min">
    <input id="cb6"
           type="checkbox"
           class="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center mt-0.5 border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
    >
    <div class="flex flex-col gap-1">
      <label for="cb6"
             class="inline-flex items-center cursor-pointer ml-0 font-medium text-grey-8"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
      </label>
      <div class="flex items-center text-grey-7 my-auto">
        <span class="text-xs">
          Le lorem ipsum est, en imprimerie, une suite de mots sans signification utilisée
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`design-system/Checkbox SansLabel smoke-test 1`] = `
<div class="flex gap-2 min-w-min">
  <input id="cb1"
         type="checkbox"
         class="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center mt-0.5 border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
  >
  <div class="flex flex-col gap-1">
  </div>
</div>
`;

exports[`design-system/Checkbox Unchecked smoke-test 1`] = `
<div class="flex gap-2 min-w-min">
  <input id="cb2"
         type="checkbox"
         class="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center mt-0.5 border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
  >
  <div class="flex flex-col gap-1">
    <label for="cb2"
           class="inline-flex items-center cursor-pointer ml-0 font-medium text-grey-8"
    >
      Description de l'action
    </label>
  </div>
</div>
`;

exports[`design-system/Checkbox UncheckedAndDisabled smoke-test 1`] = `
<div class="flex gap-2 min-w-min">
  <input id="cb4"
         type="checkbox"
         class="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center mt-0.5 border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
         disabled
  >
  <div class="flex flex-col gap-1">
    <label for="cb4"
           class="inline-flex items-center cursor-pointer ml-0 font-medium text-grey-6"
    >
      Description de l'action
    </label>
  </div>
</div>
`;

exports[`design-system/Checkbox VarianteSwitch smoke-test 1`] = `
<div class="flex gap-2 min-w-min">
  <input id="cb10"
         type="checkbox"
         class="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 relative bg-grey-4 rounded-full w-10 h-6 before:absolute before:h-4 before:w-4 before:left-1 before:top-1 before:bg-white before:duration-200 before:rounded-full checked:text-primary checked:before:translate-x-4 checked:before:flex checked:before:items-center checked:before:justify-center"
  >
  <div class="flex flex-col gap-1">
    <label for="cb10"
           class="inline-flex items-center cursor-pointer ml-0 font-medium text-grey-8"
    >
      Description de l'action
    </label>
    <div class="flex items-center text-info-1 my-auto">
      <span class="ri-information-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mr-1">
      </span>
      <span class="text-xs">
        Description additionnelle
      </span>
    </div>
  </div>
</div>
`;

exports[`design-system/Checkbox VarianteSwitchChecked smoke-test 1`] = `
<div class="flex gap-2 min-w-min">
  <input id="cb11"
         type="checkbox"
         class="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 relative bg-grey-4 rounded-full w-10 h-6 before:absolute before:h-4 before:w-4 before:left-1 before:top-1 before:bg-white before:duration-200 before:rounded-full checked:text-primary checked:before:translate-x-4 checked:before:flex checked:before:items-center checked:before:justify-center"
         checked
  >
  <div class="flex flex-col gap-1">
    <label for="cb11"
           class="inline-flex items-center cursor-pointer ml-0 font-medium text-grey-8"
    >
      Description de l'action
    </label>
    <div class="flex items-center text-info-1 my-auto">
      <span class="ri-information-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mr-1">
      </span>
      <span class="text-xs">
        Le lorem ipsum est, en imprimerie, une suite de mots sans signification utilisée
      </span>
    </div>
  </div>
</div>
`;

exports[`design-system/Checkbox VarianteSwitchDisabled smoke-test 1`] = `
<div class="flex gap-2 min-w-min">
  <input id="cb12"
         type="checkbox"
         class="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 relative bg-grey-4 rounded-full w-10 h-6 before:absolute before:h-4 before:w-4 before:left-1 before:top-1 before:bg-white before:duration-200 before:rounded-full checked:text-primary checked:before:translate-x-4 checked:before:flex checked:before:items-center checked:before:justify-center"
         disabled
         checked
  >
  <div class="flex flex-col gap-1">
    <label for="cb12"
           class="inline-flex items-center cursor-pointer ml-0 font-medium text-grey-6"
    >
      Description de l'action
    </label>
  </div>
</div>
`;
